update module to actual javascript player instead of the wordpress plugin 🤦

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "wordverse"]
-	path = wordverse
-	url = https://github.com/Design-Party-Program/wordverse.git
+	path = wordverse-r3f-player
+	url = https://github.com/Design-Party-Program/wordverse-r3f-player.git
 	branch = cobot-osc-scene
